--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "lodash-es": "^4.17.21",
     "next": "12.0.10",
     "next-compose-plugins": "^2.2.1",
-    "next-redux-wrapper": "^7.0.5",
     "next-pwa": "^5.5.4",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intl": "^5.24.6",
@@ -77,6 +77,7 @@
     "eslint-config-next": "12.0.10",
     "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^12.3.3",
