--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "cross-env": "^7.0.3",
     "history": "^5.3.0",
     "isomorphic-fetch": "^3.0.0",
-    "less": "^4.1.2",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "lodash-es": "^4.17.21",
     "next": "12.0.10",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.4",
     "next-redux-wrapper": "^7.0.5",
+    "next-with-less": "^2.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intl": "^5.24.6",
