--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "next-pwa": "^5.5.4",
     "next-redux-wrapper": "^7.0.5",
     "next-with-less": "^2.0.5",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intl": "^5.24.6",
