--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-components": "^5"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@next/bundle-analyzer": "^12.1.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@zeit/next-css": "^1.0.1",
