--- a/package.json
+++ b/package.json
@@ -23,9 +23,6 @@
   "dependencies": {
     "@next/bundle-analyzer": "^12.1.0",
     "@reduxjs/toolkit": "^1.7.2",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-less": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
     "antd": "^4.21.0",
     "apisauce": "^2.1.5",
     "babel-plugin-import": "^1.13.3",
@@ -67,6 +64,9 @@
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "@welldone-software/why-did-you-render": "^7.0.1",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "babel-jest": "^28.1.0",
     "babel-plugin-formatjs": "^10.3.18",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -84,6 +84,9 @@
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^12.3.3",
+    "next-purgecss": "^4.0.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.8.0",
     "pre-commit": "^1.2.2",
     "prettier": "2.5.1",
     "prop-types": "^15.8.1",
